// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WritePostModal component renders correctly when it is invisible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={false}
>
  <WritePostScreen />
</Modal>
`;

exports[`WritePostModal component renders correctly when it is visible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={false}
  visible={true}
>
  <WritePostScreen />
</Modal>
`;
